@@ -1,2 +1,34 @@
 #define REPLAY_THEME
 #enddef
+
+#define COUNTDOWN_THEME
+[panel]
+	id=timeout-panel
+	image=misc/status-bg.png
+	rect="+5,=,+70,="
+	xanchor=proportional
+	yanchor=fixed
+[/panel]
+[label]
+	id=time-icon
+	#icon=misc/units.png
+	icon=misc/sand-clock.png
+	text= _ "Time left"
+	ref=timeout-panel
+	rect="=+5,=+1,+16,+16"
+	xanchor=proportional
+	yanchor=fixed
+[/label]
+#enddef
+
+
+#define COUNTDOWN_THEME_STATUS
+[report_countdown]
+	id=report_timeout
+	font_size={FONT_SMALL}
+	ref=time-icon
+	rect="+5,=,+50,+20"
+	xanchor=proportional
+	yanchor=fixed
+[/report_countdown]
+#enddef
