@@ -112,6 +112,9 @@ namespace play{
 	}
 }
 
+
+
+
 LEVEL_RESULT play_level(const game_data& gameinfo, const config& game_config,
 		config const* level, CVideo& video,
 		game_state& state_of_game,
@@ -124,7 +127,6 @@ LEVEL_RESULT play_level(const game_data& gameinfo, const config& game_config,
 	} else {
 		recorder.pre_replay();
 	}
-
 	const set_random_generator generator_setter(&recorder);
 
 	//guarantee the cursor goes back to 'normal' at the end of the level
@@ -149,6 +151,8 @@ LEVEL_RESULT play_level(const game_data& gameinfo, const config& game_config,
 	if(map_data == "" && (*level)["map"] != "") {
 		map_data = read_map((*level)["map"]);
 	}
+	
+	
 
 	//if the map should be randomly generated
 	if(map_data == "" && (*level)["map_generation"] != "") {
@@ -172,6 +176,8 @@ LEVEL_RESULT play_level(const game_data& gameinfo, const config& game_config,
 	const statistics::scenario_context statistics_context(lvl["name"]);
 
 	const int num_turns = atoi(lvl["turns"].c_str());
+	
+	
 	gamestatus status(*level,num_turns);
 
 	gamemap map(game_config,map_data);
@@ -343,10 +349,19 @@ LEVEL_RESULT play_level(const game_data& gameinfo, const config& game_config,
 				for(std::vector<team>::iterator t = teams.begin(); t != teams.end(); ++t) {
 					clear_shroud(gui,status,map,gameinfo,units,teams,(t-teams.begin()));
 				}
-
+				
+				
 				if(!loading_game) {
 					game_events::fire("start");
 					state_of_game.set_variable("turn_number", "1");
+				}
+
+				// Initialize countdown clock. 
+				for(std::vector<team>::iterator t = teams.begin(); t != teams.end(); ++t) {
+					std::string countd_enabled = lvl["mp_countdown"].c_str();
+					if ( countd_enabled == "yes" && !loading_game ){
+					 	t->set_countdown_time(1000 * lexical_cast_default<int>(lvl["mp_countdown_init_time"],0));
+					}
 				}
 
 				gui.recalculate_minimap();
@@ -444,7 +459,7 @@ redo_turn:
 
 				if(!replaying && team_it->is_human()) {
 					LOG_NG << "is human...\n";
-
+					
 					try {
 						play_turn(gameinfo,state_of_game,status,game_config,
 						          *level, key, gui, map, teams, player_number,
@@ -453,10 +468,10 @@ redo_turn:
 						if (end_turn.redo == player_number)
 							goto redo_turn;
 					}
-
+					
 					if(game_config::debug)
 						display::clear_debug_highlights();
-
+										
 					LOG_NG << "human finished turn...\n";
 
 				} else if(!replaying && team_it->is_ai()) {
