@@ -34,10 +34,9 @@ namespace reports {
 		    UNIT_ADVANCEMENT_OPTIONS, UNIT_MOVES, UNIT_WEAPONS,
 		    UNIT_IMAGE, UNIT_PROFILE, TIME_OF_DAY,
 		    TURN, GOLD, VILLAGES, NUM_UNITS, UPKEEP, EXPENSES,
-		    INCOME, TERRAIN, POSITION,
-		    SIDE_PLAYING, OBSERVERS, REPORT_CLOCK,
-		    SELECTED_TERRAIN, EDIT_LEFT_BUTTON_FUNCTION,
-				NUM_REPORTS};
+		    INCOME, TERRAIN, POSITION, SIDE_PLAYING, OBSERVERS,
+		    REPORT_COUNTDOWN, REPORT_CLOCK, SELECTED_TERRAIN,
+		    EDIT_LEFT_BUTTON_FUNCTION, NUM_REPORTS};
 
 	enum { UNIT_REPORTS_BEGIN=UNIT_DESCRIPTION, UNIT_REPORTS_END=UNIT_PROFILE+1 };
 	enum { STATUS_REPORTS_BEGIN=TIME_OF_DAY, STATUS_REPORTS_END=NUM_REPORTS};
